fixed image properties and display on small screens

--- a/src/assets/styles/projects.css
+++ b/src/assets/styles/projects.css
@@ -16,17 +16,15 @@
     gap: 40px;
 }
 .portfolio-container img{
-    box-sizing: border-box;
     width: 350px;
     height: 250px;
-    transition: 0.3s;
+    transition: transform 0.3s ease;
     cursor: pointer;
     border-radius: 10px;
 }
 .portfolio-container img:hover{
-    transform: scale(1.10);
+    transform: scale(1.05);
     border: 4px solid #6E026F;
-    transition: 0.4s;
 }
 .showmore{
     display: flex;
@@ -51,13 +49,14 @@
         font-size: 1.5em;
     }
     .portfolio-container{
-        display: flex;
-        flex-direction: column;
-        gap: 10vw;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        width: 90vw;
     }
     .portfolio-container img{
         width: 100%;
-        height: 100%;
+        height: auto;
+        border-radius: 10px;
     }
     .showmore{
         margin-top: 20px;
